# notion-scripts

./: .gitignore  README.md  bz_notion_sync.py  bzsettings.py  gh_notion_sync.py  ghsettings.py  notion_sync.py  pyproject.toml  settings.py  sync_settings.dev.toml  sync_settings.production.toml
.github/workflows/: ci.yml  cron.yml  run.yml
config/: sync_settings.dev.toml  sync_settings.production.toml
libs/: __init__.py  bugzilla_sync.py  bzhelper.py  gh_label_sync.py  gh_project_sync.py  ghhelper.py  github_schema.py  notion_data.py  util.py
libs/project_sync/: __init__.py  bugzilla.py  common.py  github.py  sync.py
mzla_notion/: __main__.py  cli.py  github_schema.py  notion_data.py  people.py  sgqlc_endpoint.py  util.py
mzla_notion/sync/: base.py  board.py  deployments.py  label.py  project.py
mzla_notion/tracker/: bugzilla.py  common.py  github.py  github_fixups.py  github_utils.py
scripts/: github_debug.py  notion_debug.py
templates/: .gitignore  README.md  propagate.py  pyproject.toml
templates/src/.github/: PULL_REQUEST_TEMPLATE.md
templates/src/.github/ISSUE_TEMPLATE/: bug_report.md.j2  config.yml.j2
templates/src/.github/workflows/: pr-merged.yml.j2
test/: README.md  handlers.py  test_cli.py  test_notion_data.py  test_project_bugzilla.py  test_project_github.py  test_project_sync.py
test/fixtures/: notion_blocks.json  notion_epics_id.json  notion_milestones_id.json  notion_sprints_id.json  notion_tasks_id.json
test/fixtures/bugzilla/: bug1849476.json  bug1944850.json  bug1944885.json
test/fixtures/github/: add_comment_both_boards_request.gql  add_comment_both_boards_response.json  add_issue_to_project_request.gql  add_issue_to_project_response.json  delete_project_item_request.gql  delete_project_item_response.json  get_all_issues_pg2_request.gql  get_all_issues_pg2_response.json  get_all_issues_request.gql  get_all_issues_response.json  get_all_labels_request.gql  get_all_labels_response.json  get_issue_field_priority_request.gql  get_issue_field_priority_response.json  get_issues_1_and_2_request.gql  get_issues_1_and_2_response.json  get_issues_1_only_request.gql  get_issues_1_only_response.json  get_issues_2_only_request.gql  get_issues_2_only_response.json  get_issues_3_request.gql  get_issues_3_response.json  get_issues_4_request.gql  get_issues_4_response.json  get_label_bug_request.gql  get_label_bug_response.json  get_labels_ab_request.gql  get_labels_ab_response.json  get_labels_c_request.gql  get_labels_c_response.json  get_project_info_request.gql  get_project_info_response.json  get_pull_requests_request.gql  get_pull_requests_response.json  get_sprint_project_request.gql  get_sprint_project_response.json  get_sprint_tasks_request.gql  get_sprint_tasks_response.json  get_users_request.gql  get_users_response.json  (+13 more)
test/fixtures/phabricator/: project_search_reviewers.json  revision_search_reviewers.json
