[project]
name = "mzla-notion"
version = "0.2"
description = "Sync and utility scripts for Notion and other services."
authors = [
    { name = "Andrei Hajdukewycz", email = "sancus@off.net" },
    { name = "Malini Das", email = "malini@thunderbird.net" },
    { name = "Philipp Kewisch", email = "kewisch@thunderbird.net" }
]
dependencies = [
    "notion-client>=2.2.1",
    "requests>=2.32.3",
    "sgqlc>=16.4",
    "sgqlc-schemas>=0.1.0",
    "python-dateutil>=2.9.0.post0",
    "md2notionpage==0.1.5",
    "notion-to-md-py==0.1.0",
    "h2>=4.2.0",
    "aiostream>=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
mzla-notion = "mzla_notion.cli:main"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "respx>=0.22.0",
    "freezegun>=1.5.2",
    "coverage>=7.9.2",
]

[tool.rye.scripts]
sync = { call = "mzla_notion.cli:main" }
test = "python -m unittest"
"test:coverage" = "python -m coverage run -m unittest"
"test:coverage-report" = "python -m coverage html"
cover = { chain = ["test:coverage", "test:coverage-report"] }

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["mzla_notion/github_schema.py"]

[tool.coverage.run]
source = ["mzla_notion"]
omit = ["mzla_notion/github_schema.py"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
extend-select = ["D"]
ignore = ["D100", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"test/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
exclude = ["mzla_notion/github_schema.py"]
